--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,7 +41,7 @@
         android:id="@+id/nav_insurance"
         android:name="com.example.nahaloman.ui.insurance.insurance"
         android:label="@string/menu_insurance"
-        tools:layout="@layout/insurance" />
+        tools:layout="@layout/fragment_insurance" />
     <fragment
         android:id="@+id/nav_analytic"
         android:name="com.example.nahaloman.ui.analytic.analytic"
